Fix overflowing tabs

--- a/sp123_rubik_style.scss
+++ b/sp123_rubik_style.scss
@@ -28,7 +28,7 @@ body {
   width: 100%;
 }
 
-#page-title .limiter #page-title .limiter {
+#page-title .limiter {
   width: auto;
 }
 
